DSND-3300: Upgrade deps & format code (#219)
* DSND-3300: Upgrade deps

* DSND-3300: Format code

* DSND-3300: Remove unused imports

* DSND-3300: Upgrade vulnerable dep